tests/negative/syntax/keyword_usage.stream
// EXPECT: Syntax Error
let while = 10;